Fix dark mode logo

--- a/website/docs/src/styles/_docs.scss
+++ b/website/docs/src/styles/_docs.scss
@@ -15,6 +15,14 @@ footer {
 	margin-top: 0;
 }
 
+.logo svg {
+	height: 30px;
+
+	.cls-1 {
+		fill: var(--logo-font-color);
+	}
+}
+
 .docs-main {
 	display: flex;
 	flex-direction: row;
